minor adjustments to the contact section

--- a/index.html
+++ b/index.html
@@ -302,15 +302,17 @@
             <section id="contact" class="contact content__section">
                 <h1 class="section__title">Contact</h1>
                 Contact form will appear here soon for now you can reach me via
-                <a href="mailto:jaqb1991@gmail.com" class="button--primary"
-                    ><i class="fas fa-at"></i
-                ></a>
-                <a
-                    href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
-                    class="button--primary"
-                >
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
+                <div class="contact__links">
+                    <a href="mailto:jaqb1991@gmail.com" class="button--primary"
+                        ><i class="fas fa-at"></i
+                    ></a>
+                    <a
+                        href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                        class="button--primary"
+                    >
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
             </section>
         </main>
         <footer>© 2022 Jakub Wywrocki</footer>
