--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </a>
             <div class="header__socials">
                 <a
-                    href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                    href="https://www.linkedin.com/in/jwywrocki"
                     class="socials__link"
                 >
                     <i class="fab fa-linkedin-in"></i>
@@ -128,7 +128,7 @@
                         <i class="fab fa-github"></i>
                     </a>
                     <a
-                        href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                        href="https://www.linkedin.com/in/jwywrocki"
                         class="button--primary"
                     >
                         Vist me on LinkedIn
@@ -307,7 +307,7 @@
                         ><i class="fas fa-at"></i
                     ></a>
                     <a
-                        href="https://www.linkedin.com/in/jakub-wywrocki-503a0122a"
+                        href="https://www.linkedin.com/in/jwywrocki"
                         class="button--primary"
                     >
                         <i class="fab fa-linkedin-in"></i>
