changed to mobile first with some adjustments

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="about__info">
                     <div class="about__text">
                         <p>
-                            Hello! My name is Jakub and I knew from an early age
+                            Hello! My name is Jakub, I knew from an early age
                             that I would tie my future with IT. In the last
                             years of my studies, I became interested in creating
                             websites. I begin as Frontend Developer but my goal
