--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;400;600&family=Spartan:wght@200&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;600&family=Spartan:wght@200&display=swap"
             rel="stylesheet"
         />
         <link
