--- a/index.html
+++ b/index.html
@@ -285,13 +285,11 @@
                         <div class="card__image">
                             <img
                                 src="./img/projects/task_4.png"
-                                alt="Project task_4 screenshot"
+                                alt="Project weather app screenshot"
                             />
                         </div>
                         <div class="card__info">
-                            <h2 class="card__title">
-                                Weather APP<br />(Work in progress)
-                            </h2>
+                            <h2 class="card__title">Weather APP</h2>
                             <p>
                                 The goal is to create an application that will
                                 retrive weather data from API and display it.
@@ -302,14 +300,14 @@
                             </div>
                             <div class="card__links">
                                 <a
-                                    href="https://github.com/jwywrocki/task_4"
+                                    href="https://github.com/jwywrocki/weather-app"
                                     target="_blank"
                                     class="button--primary link--primary"
                                 >
                                     <i class="fab fa-github"></i>
                                 </a>
                                 <a
-                                    href="https://jwywrocki.github.io/task_4/"
+                                    href="https://jwywrocki.github.io/weather-app/"
                                     target="_blank"
                                     class="button--primary link--primary"
                                 >
