--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="projects__card">
                         <div class="card__image">
                             <img
-                                src="./img/projects/task_4.png"
+                                src="./img/projects/weather_app.png"
                                 alt="Project weather app screenshot"
                             />
                         </div>
