--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 ascending order.
                             </p>
                             <div class="card__tech">
-                                <span>Tech stack</span>
+                                <span class="card__tech--pointer">Tech stack</span>
                                 <p>HTML CSS JS</p>
                             </div>
                             <div class="card__links">
@@ -221,7 +221,7 @@
                                 whole table is saved in localstorage.
                             </p>
                             <div class="card__tech">
-                                <span>Tech stack</span>
+                                <span class="card__tech--pointer">Tech stack</span>
                                 <p>HTML CSS JS</p>
                             </div>
                             <div class="card__links">
@@ -260,7 +260,7 @@
                                 the previous quote.
                             </p>
                             <div class="card__tech">
-                                <span>Tech stack</span>
+                                <span class="card__tech--pointer">Tech stack</span>
                                 <p>HTML CSS React API</p>
                             </div>
                             <div class="card__links">
@@ -295,7 +295,7 @@
                                 retrive weather data from API and display it.
                             </p>
                             <div class="card__tech">
-                                <span>Tech stack</span>
+                                <span class="card__tech--pointer">Tech stack</span>
                                 <p>HTML CSS React API</p>
                             </div>
                             <div class="card__links">
