updated project img

--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
                 <h1 class="section__title">About me</h1>
                 <div class="about__info">
                     <div class="about__text">
-                        <p>
+                        <p class="paragrapgh">
                             Hello! My name is Jakub, I knew from an early age
                             that I would tie my future with IT. In the last
                             years of my studies, I became interested in creating
                             websites. I begin as Frontend Developer but my goal
                             is to become Fullstack Developer in the future.
                         </p>
-                        <p>
+                        <p class="paragrapgh">
                             I completed a three-month internship as a Frontend
                             Web Developer at Primeo. During the internship, I
                             learned a lot about teamwork on real projects for
