--- a/index.html
+++ b/index.html
@@ -54,25 +54,16 @@
             </a>
             <ul class="navigation__container">
                 <li class="navigation__item">
-                    <a href="#about" class="navigation__link link--primary">
-                        About me
-                    </a>
+                    <a href="#about" class="navigation__link link--primary"> About me </a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#projects" class="navigation__link link--primary">
-                        Projects
-                    </a>
+                    <a href="#projects" class="navigation__link link--primary"> Projects </a>
                 </li>
                 <li class="navigation__item">
-                    <a href="#contact" class="navigation__link link--primary">
-                        Contact
-                    </a>
+                    <a href="#contact" class="navigation__link link--primary"> Contact </a>
                 </li>
                 <li class="navigation__item">
-                    <a
-                        href="./Jakub_Wywrocki_CV.pdf"
-                        class="button--primary link--primary"
-                    >
+                    <a href="./Jakub_Wywrocki_CV.pdf" class="button--primary link--primary">
                         Resume
                     </a>
                 </li>
@@ -80,32 +71,22 @@
         </nav>
         <header class="header">
             <div class="header__text">
-                <h1>
-                    Hi, my name is <span class="text--primary">Jakub</span>.
-                </h1>
+                <h1>Hi, my name is <span class="text--primary">Jakub</span>.</h1>
                 <h2>
                     I have
-                    <span class="text--primary">BS degree in IT</span> and I am
-                    a <span class="text--primary">Junior</span> Front-end
-                    Developer with MERN stack basic knowledge.
+                    <span class="text--primary">BS degree in IT</span> and I am a
+                    <span class="text--primary">Junior</span> Front-end Developer with MERN stack
+                    basic knowledge.
                 </h2>
             </div>
-            <a href="#projects" class="button--primary link--primary">
-                Check out my projects!
-            </a>
+            <a href="#projects" class="button--primary link--primary"> Check out my projects! </a>
         </header>
         <main id="content" class="content">
             <div class="socials">
-                <a
-                    href="https://www.linkedin.com/in/jwywrocki"
-                    class="socials__link link--primary"
-                >
+                <a href="https://www.linkedin.com/in/jwywrocki" class="socials__link link--primary">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a
-                    href="https://github.com/jwywrocki"
-                    class="socials__link link--primary"
-                >
+                <a href="https://github.com/jwywrocki" class="socials__link link--primary">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
@@ -114,25 +95,18 @@
                 <div class="about__info">
                     <div class="about__text">
                         <p class="paragrapgh">
-                            Hello! My name is Jakub, I knew from an early age
-                            that I would tie my future with IT. In the last
-                            years of my studies, I became interested in creating
-                            websites. I begin as Frontend Developer but my goal
-                            is to become Fullstack Developer in the future.
+                            Hello! My name is Jakub, I knew from an early age that I would tie my
+                            future with IT. In the last years of my studies, I became interested in
+                            creating websites. I begin as Frontend Developer but my goal is to
+                            become Fullstack Developer in the future.
                         </p>
                         <p class="paragrapgh">
-                            I completed a three-month internship as a Frontend
-                            Web Developer at Primeo. During the internship, I
-                            learned a lot about teamwork on real projects for
-                            local clients and from abroad. Now when I finished
-                            my studies with a bachelor's degree in computer
-                            science I keep learning and looking for job. If you
-                            are intersted in my person
-                            <a
-                                href="#contact"
-                                class="text--primary link--primary"
-                                >contact</a
-                            >
+                            I completed a three-month internship as a Frontend Web Developer at
+                            Primeo. During the internship, I learned a lot about teamwork on real
+                            projects for local clients and from abroad. Now when I finished my
+                            studies with a bachelor's degree in computer science I keep learning and
+                            looking for job. If you are intersted in my person
+                            <a href="#contact" class="text--primary link--primary">contact</a>
                             with me.
                         </p>
                     </div>
@@ -141,10 +115,7 @@
                     </div>
                 </div>
                 <div class="about__links">
-                    <a
-                        href="https://github.com/jwywrocki"
-                        class="button--primary link--primary"
-                    >
+                    <a href="https://github.com/jwywrocki" class="button--primary link--primary">
                         Vist me on GitHub
                         <i class="fab fa-github"></i>
                     </a>
@@ -158,27 +129,20 @@
                 </div>
             </section>
             <section id="projects" class="projects content__section">
-                <h1 class="section__title" class="section__title">
-                    Some of my projects
-                </h1>
+                <h1 class="section__title" class="section__title">Some of my projects</h1>
                 <div class="projects__container">
                     <div class="projects__card">
                         <div class="card__image">
-                            <img
-                                src="./img/projects/task_1.png"
-                                alt="Project task_1 screenshot"
-                            />
+                            <img src="./img/projects/task_1.png" alt="Project task_1 screenshot" />
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">JS Arrays</h2>
                             <p>
-                                The task was to write a JavaScript script which,
-                                after clicking on the button, will generate 20
-                                random integers from 1 to 100 and place them in
-                                two columns. One column should contain only even
-                                numbers and the other one odd numbers.
-                                Additionally, both columns must be sorted in
-                                ascending order.
+                                The task was to write a JavaScript script which, after clicking on
+                                the button, will generate 20 random integers from 1 to 100 and place
+                                them in two columns. One column should contain only even numbers and
+                                the other one odd numbers. Additionally, both columns must be sorted
+                                in ascending order.
                             </p>
                             <div class="card__tech">
                                 <span class="card__tech--pointer">Tech stack</span>
@@ -204,21 +168,16 @@
                     </div>
                     <div class="projects__card">
                         <div class="card__image">
-                            <img
-                                src="./img/projects/task_2.png"
-                                alt="Project task_2 screenshot"
-                            />
+                            <img src="./img/projects/task_2.png" alt="Project task_2 screenshot" />
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">Book List</h2>
                             <p>
-                                The task was to write simple book list using
-                                HTML, CSS and JavaScript. After sending the
-                                form, the page cannot be reloaded.
-                                Simultaneously display the added book in the
-                                table, and clear the form. In case a field is
-                                not validated, the book cannot be added. The
-                                whole table is saved in localstorage.
+                                The task was to write simple book list using HTML, CSS and
+                                JavaScript. After sending the form, the page cannot be reloaded.
+                                Simultaneously display the added book in the table, and clear the
+                                form. In case a field is not validated, the book cannot be added.
+                                The whole table is saved in localstorage.
                             </p>
                             <div class="card__tech">
                                 <span class="card__tech--pointer">Tech stack</span>
@@ -245,19 +204,17 @@
                     <div class="projects__card">
                         <div class="card__image">
                             <img
-                                src="./img/projects/random-quote-generator.png"
+                                src="./img/projects/random_quote_generator.png"
                                 alt="Project task_3 screenshot"
                             />
                         </div>
                         <div class="card__info">
                             <h2 class="card__title">Random Quote Generator</h2>
                             <p>
-                                The goal was to create an application that will
-                                retrieve quotes from the API, which will display
-                                a random quotation. Additionally I created a
-                                button that will allow to draw the next random
-                                quote and a button that will allow to return to
-                                the previous quote.
+                                The goal was to create an application that will retrieve quotes from
+                                the API, which will display a random quotation. Additionally I
+                                created a button that will allow to draw the next random quote and a
+                                button that will allow to return to the previous quote.
                             </p>
                             <div class="card__tech">
                                 <span class="card__tech--pointer">Tech stack</span>
@@ -291,8 +248,8 @@
                         <div class="card__info">
                             <h2 class="card__title">Weather APP</h2>
                             <p>
-                                The goal is to create an application that will
-                                retrive weather data from API and display it.
+                                The goal is to create an application that will retrive weather data
+                                from API and display it.
                             </p>
                             <div class="card__tech">
                                 <span class="card__tech--pointer">Tech stack</span>
@@ -322,10 +279,7 @@
                 <h1 class="section__title">Contact</h1>
                 Contact form will appear here soon for now you can reach me via
                 <div class="contact__links">
-                    <a
-                        href="mailto:jaqb1991@gmail.com"
-                        class="button--primary link--primary"
-                    >
+                    <a href="mailto:jaqb1991@gmail.com" class="button--primary link--primary">
                         <i class="fas fa-at"></i>
                     </a>
                     <a
