dark light mode, and layout adjustments

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 </li>
             </ul>
         </nav>
+        <div class="fa-solid fa-sun theme_toggle" id="toggle"></div>
         <header class="header">
             <div class="header__text">
                 <h1>Hi, my name is <span class="text--primary">Jakub</span>.</h1>
@@ -248,8 +249,8 @@
                         <div class="card__info">
                             <h2 class="card__title">Weather APP</h2>
                             <p>
-                                The goal is to create an application that will retrive weather data
-                                from API and display it.
+                                The goal was to create an simple application that will retrive
+                                weather data from API and display it.
                             </p>
                             <div class="card__tech">
                                 <span class="card__tech--pointer">Tech stack</span>
